file helper was added

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "log4js": "4.2.0",
     "log4js-protractor-appender": "1.1.2",
     "moment": "2.24.0",
+    "node-resemble-js": "0.2.0",
+    "pngjs": "3.3.3",
+    "protractor-jasmine2-screenshot-reporter": "^0.5.0",
     "pre-commit": "^1.2.2",
     "protractor": "5.4.2",
     "protractor-flake": "4.0.0",
